--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
         </div>
         <button>Translate Text</button>
     </div>
+
+    <script src="js/countries.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
